--- a/IdentityServer/6_IdentityServer.csproj
+++ b/IdentityServer/6_IdentityServer.csproj
@@ -6,6 +6,7 @@
   
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.3" />
 
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
 
