Added configuration to Identity and API

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,14 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":
-      "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "App": {
-    "Self": {
-      "FrontEnd": "http://localhost:4200" //This is the front-end url. This value is need because of CORS; * is allowed
+    "Frontend": {
+      "FrontendUrl": "http://localhost:4200",
+      "ClientId": "dex-api",
+      "ClientSecret": "secret"
     },
     "IdentityServer": {
-      "IdentityUrl": "http://localhost:51213"
+      "IdentityUrl": "http://localhost:5004"
     }
   },
   "Logging": {
