Save changes to database when adding an entity. Added Seed helper to seed database if in development mode. Added new migration to set correct relation between project -> user (one-to-many: https://docs.microsoft.com/en-us/ef/core/modeling/relationships?tabs=fluent-api%2Cfluent-api-simple-key%2Csimple-key#fully-defined-relationships)

--- a/Data/4_Data.csproj
+++ b/Data/4_Data.csproj
@@ -11,6 +11,8 @@
     <Compile Remove="Migrations\20200304083429_updateModels.Designer.cs" />
     <Compile Remove="Migrations\20200326115807_Initial.cs" />
     <Compile Remove="Migrations\20200326115807_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200326135520_FixedManyToOneUserProjects.cs" />
+    <Compile Remove="Migrations\20200326135520_FixedManyToOneUserProjects.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
