Improved secrets. Renamed Config

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     "Frontend": {
       "FrontendUrl": "http://localhost:4200",
       "ClientId": "dex-api",
-      "ClientSecret": "secret"
+      "ClientSecret": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
     },
     "IdentityServer": {
       "IdentityUrl": "http://localhost:5004"
