--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -14,11 +14,11 @@
         {
           "Key": "dex-api",
           //TODO: This should be set via an environment variable
-          "Value": "secret"
+          "Value": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
         },
         {
           "Key": "dex-frontend",
-          "Value": "secret"
+          "Value": "D4JAebnRwJnX^xXzrNRxs2v3qg&qWG5PZ9VB4ngM8!N!mhzcrWh8"
         }
       ]
 
