--- a/API/1_API.csproj
+++ b/API/1_API.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>API</RootNamespace>
     <DocumentationFile>.\API.xml</DocumentationFile>
     <Company>Digital Excellence Fontys</Company>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
