WIP of crud project, blocked by not having users
TODO:
add authorization,
add currentuser by claim,
add deletion privilege validation

--- a/Data/4_Data.csproj
+++ b/Data/4_Data.csproj
@@ -2,18 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Migrations\20200304082656_InitialCreate.cs" />
-    <Compile Remove="Migrations\20200304082656_InitialCreate.Designer.cs" />
-    <Compile Remove="Migrations\20200304083429_updateModels.cs" />
-    <Compile Remove="Migrations\20200304083429_updateModels.Designer.cs" />
-    <Compile Remove="Migrations\20200326115807_Initial.cs" />
-    <Compile Remove="Migrations\20200326115807_Initial.Designer.cs" />
-    <Compile Remove="Migrations\20200326135520_FixedManyToOneUserProjects.cs" />
-    <Compile Remove="Migrations\20200326135520_FixedManyToOneUserProjects.Designer.cs" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
