Added frontend settings to appsettings.json for release

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=digital_excellence;Database=dex;User=dex;Password=Dexcelence!1;"
   },
+  "App": {
+    "Frontend": {
+      "FrontendUrl": "http://dex.kn01.fhict.nl",
+      "ClientId": "dex-api",
+      "ClientSecret": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
+    },
+    "IdentityServer": {
+      "IdentityUrl": "http://dex-identity.kn01.fhict.nl"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
