--- a/Services/2_Services.csproj
+++ b/Services/2_Services.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="GitLabApiClient" Version="1.4.0" />
   </ItemGroup>
 
   <ItemGroup>
