Deleted secrets and connection string
Deleted the secrets and the connection string so we can set them with environment variables when we migrate.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=digital_excellence;Database=dex;User=dex;Password=Dexcelence!1;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
