--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -13,12 +13,11 @@
       "IdentityApplications": [ //These settings only apply the first time the API runs (these values don't update the db)
         {
           "Key": "dex-api",
-          //TODO: This should be set via an environment variable
-          "Value": "secret"
+          "Value": ""
         },
         {
           "Key": "dex-frontend",
-          "Value": "secret"
+          "Value": ""
         }
       ]
 
