--- a/.editorconfig
+++ b/.editorconfig
@@ -154,23 +154,23 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggest
 # ReSharper properties
 resharper_accessor_owner_body = expression_body
 resharper_alignment_tab_fill_style = use_spaces
-resharper_align_first_arg_by_paren = true
-resharper_align_linq_query = true
-resharper_align_multiline_argument = true
-resharper_align_multiline_array_and_object_initializer = true
-resharper_align_multiline_array_initializer = true
-resharper_align_multiline_binary_expressions_chain = true
-resharper_align_multiline_calls_chain = true
-resharper_align_multiline_expression = true
-resharper_align_multiline_extends_list = true
-resharper_align_multiline_for_stmt = true
-resharper_align_multiline_implements_list = true
-resharper_align_multiline_parameter = true
-resharper_align_multiline_switch_expression = true
-resharper_align_multiple_declaration = true
-resharper_align_multline_type_parameter_constrains = true
-resharper_align_multline_type_parameter_list = true
-resharper_align_tuple_components = true
+resharper_align_first_arg_by_paren = false
+resharper_align_linq_query = false
+resharper_align_multiline_argument = false
+resharper_align_multiline_array_and_object_initializer = false
+resharper_align_multiline_array_initializer = false
+resharper_align_multiline_binary_expressions_chain = false
+resharper_align_multiline_calls_chain = false
+resharper_align_multiline_expression = false
+resharper_align_multiline_extends_list = false
+resharper_align_multiline_for_stmt = false
+resharper_align_multiline_implements_list = false
+resharper_align_multiline_parameter = false
+resharper_align_multiline_switch_expression = false
+resharper_align_multiple_declaration = false
+resharper_align_multline_type_parameter_constrains = false
+resharper_align_multline_type_parameter_list = false
+resharper_align_tuple_components = false
 resharper_allow_alias = true
 resharper_allow_comment_after_lbrace = false
 resharper_always_use_end_of_line_brace_style = false
@@ -363,7 +363,7 @@ resharper_remove_blank_lines_near_braces_in_declarations = true
 resharper_remove_this_qualifier = true
 resharper_reorder_open_declarations = false
 resharper_resx_attribute_indent = single_indent
-resharper_resx_linebreak_before_elements = 
+resharper_resx_linebreak_before_elements =
 resharper_resx_max_blank_lines_between_tags = 0
 resharper_resx_max_line_length = 2147483647
 resharper_resx_pi_attribute_style = do_not_touch
@@ -516,7 +516,7 @@ resharper_xmldoc_wrap_lines = true
 resharper_xmldoc_wrap_tags_and_pi = true
 resharper_xmldoc_wrap_text = true
 resharper_xml_attribute_indent = align_by_first_attribute
-resharper_xml_linebreak_before_elements = 
+resharper_xml_linebreak_before_elements =
 resharper_xml_max_blank_lines_between_tags = 2
 resharper_xml_max_line_length = 120
 resharper_xml_pi_attribute_style = do_not_touch
