--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,7 +9,7 @@
       "ClientSecret": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
     },
     "IdentityServer": {
-      "IdentityUrl": "http://localhost:5004"
+      "IdentityUrl": "https://localhost:5005"
     }
   },
   "Logging": {
