Updated Editorconfig to fix a few things, discussed with Stijn.

--- a/.editorconfig
+++ b/.editorconfig
@@ -156,20 +156,20 @@ resharper_accessor_owner_body = expression_body
 resharper_alignment_tab_fill_style = use_spaces
 resharper_align_first_arg_by_paren = false
 resharper_align_linq_query = false
-resharper_align_multiline_argument = false
-resharper_align_multiline_array_and_object_initializer = false
-resharper_align_multiline_array_initializer = false
-resharper_align_multiline_binary_expressions_chain = false
-resharper_align_multiline_calls_chain = false
-resharper_align_multiline_expression = false
-resharper_align_multiline_extends_list = false
-resharper_align_multiline_for_stmt = false
-resharper_align_multiline_implements_list = false
-resharper_align_multiline_parameter = false
-resharper_align_multiline_switch_expression = false
-resharper_align_multiple_declaration = false
-resharper_align_multline_type_parameter_constrains = false
-resharper_align_multline_type_parameter_list = false
+resharper_align_multiline_argument = true
+resharper_align_multiline_array_and_object_initializer = true
+resharper_align_multiline_array_initializer = true
+resharper_align_multiline_binary_expressions_chain = true
+resharper_align_multiline_calls_chain = true
+resharper_align_multiline_expression = true
+resharper_align_multiline_extends_list = true
+resharper_align_multiline_for_stmt = true
+resharper_align_multiline_implements_list = true
+resharper_align_multiline_parameter = true
+resharper_align_multiline_switch_expression = true
+resharper_align_multiple_declaration = true
+resharper_align_multline_type_parameter_constrains = true
+resharper_align_multline_type_parameter_list = true
 resharper_align_tuple_components = false
 resharper_allow_alias = true
 resharper_allow_comment_after_lbrace = false
@@ -220,7 +220,7 @@ resharper_blank_lines_inside_namespace = 1
 resharper_blank_lines_inside_region = 1
 resharper_blank_lines_inside_type = 1
 resharper_blank_line_after_pi = true
-resharper_braces_redundant = true
+resharper_braces_redundant = false
 resharper_can_use_global_alias = true
 resharper_constructor_or_destructor_body = block_body
 resharper_continuous_indent_multiplier = 1
@@ -266,7 +266,7 @@ resharper_html_space_before_self_closing = false
 resharper_html_wrap_lines = true
 resharper_ignore_space_preservation = false
 resharper_include_prefix_comment_in_indent = false
-resharper_indent_anonymous_method_block = true
+resharper_indent_anonymous_method_block = false
 resharper_indent_case_from_select = true
 resharper_indent_child_elements = OneIndent
 resharper_indent_inside_namespace = true
@@ -524,3 +524,6 @@ resharper_xml_space_before_self_closing = true
 resharper_xml_wrap_lines = true
 resharper_xml_wrap_tags_and_pi = true
 resharper_xml_wrap_text = false
+
+# IDE1006: Naming Styles
+dotnet_diagnostic.IDE1006.severity = warning
