Auto cleanup with editor config and resharper.

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -1,38 +1,40 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "App": {
-    "Self": {
-      "JwtAuthority": "http://localhost:5004",
-      "DeleteTokenLifeTimeInDays": 90, //When a user request deletion of his account, this is the max days before the request is invalid; Default: 90
-      "IdentityApplications": [ //These settings only apply the first time the API runs (these values don't update the db)
-        {
-          "Key": "dex-api",
-          //TODO: This should be set via an environment variable
-          "Value": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
-        },
-        {
-          "Key": "dex-frontend",
-          "Value": "D4JAebnRwJnX^xXzrNRxs2v3qg&qWG5PZ9VB4ngM8!N!mhzcrWh8"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
         }
-      ]
+    },
+    "App": {
+        "Self": {
+            "JwtAuthority": "http://localhost:5004",
+            "DeleteTokenLifeTimeInDays":
+                90, //When a user request deletion of his account, this is the max days before the request is invalid; Default: 90
+            "IdentityApplications":
+            [//These settings only apply the first time the API runs (these values don't update the db)
+                {
+                    "Key": "dex-api",
+                    //TODO: This should be set via an environment variable
+                    "Value": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
+                },
+                {
+                    "Key": "dex-frontend",
+                    "Value": "D4JAebnRwJnX^xXzrNRxs2v3qg&qWG5PZ9VB4ngM8!N!mhzcrWh8"
+                }
+            ]
 
+        },
+        "Api": {
+            "DeXApiUrl": "http://localhost:5000"
+        },
+        "Fhict": {
+            "FhictIdentityUrl": "https://identity.fhict.nl",
+            "FhictClientId": "",
+            "FhictClientSecret": "",
+            "FhictRedirectUri": "",
+            "FhictScopes": ""
+        }
     },
-    "Api": {
-      "DeXApiUrl": "http://localhost:5000"
-    },
-    "Fhict": {
-      "FhictIdentityUrl": "https://identity.fhict.nl",
-      "FhictClientId": "",
-      "FhictClientSecret": "",
-      "FhictRedirectUri": "",
-      "FhictScopes": ""
-    }
-    },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
 }
