--- a/2_Services.Tests/2_Services.Tests.csproj
+++ b/2_Services.Tests/2_Services.Tests.csproj
@@ -8,9 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\3_Repositories.Tests\3_Repositories.Tests.csproj" />
+    <ProjectReference Include="..\Repositories\3_Repositories.csproj" />
+    <ProjectReference Include="..\Services\2_Services.csproj" />
   </ItemGroup>
 
 </Project>
