Add redirect uri and postlogout uri to the appsettings and configs

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -9,10 +9,8 @@
     "App": {
         "Self": {
             "JwtAuthority": "http://localhost:5004",
-            "DeleteTokenLifeTimeInDays":
-                90, //When a user request deletion of his account, this is the max days before the request is invalid; Default: 90
-            "IdentityApplications":
-            [//These settings only apply the first time the API runs (these values don't update the db)
+            "DeleteTokenLifeTimeInDays": 90, //When a user request deletion of his account, this is the max days before the request is invalid; Default: 90
+            "IdentityApplications": [ //These settings only apply the first time the API runs (these values don't update the db)
                 {
                     "Key": "dex-api",
                     //TODO: This should be set via an environment variable
@@ -23,7 +21,6 @@
                     "Value": "D4JAebnRwJnX^xXzrNRxs2v3qg&qWG5PZ9VB4ngM8!N!mhzcrWh8"
                 }
             ]
-
         },
         "Api": {
             "DeXApiUrl": "http://localhost:5000"
@@ -34,6 +31,10 @@
             "FhictClientSecret": "",
             "FhictRedirectUri": "",
             "FhictScopes": ""
+        },
+        "Frontend": {
+            "RedirectUrisFrontend": [ "http://localhost:4200/auth-callback" ],
+            "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
         }
     },
     "AllowedHosts": "*"
