--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -9,10 +9,8 @@
     "App": {
         "Self": {
             "JwtAuthority": "http://localhost:5004",
-            "DeleteTokenLifeTimeInDays":
-                90, //When a user request deletion of his account, this is the max days before the request is invalid; Default: 90
-            "IdentityApplications":
-            [//These settings only apply the first time the API runs (these values don't update the db)
+            "DeleteTokenLifeTimeInDays": 90, //When a user request deletion of his account, this is the max days before the request is invalid; Default: 90
+            "IdentityApplications": [ //These settings only apply the first time the API runs (these values don't update the db)
                 {
                     "Key": "dex-api",
                     "Value": ""
@@ -33,6 +31,10 @@
             "FhictClientSecret": "",
             "FhictRedirectUri": "",
             "FhictScopes": ""
+        },
+        "Frontend": {
+            "RedirectUrisFrontend": [],
+            "PostLogoutUrisFrontend": []
         }
     },
     "AllowedHosts": "*"
