Implemented implicit flow for swagger

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -10,7 +10,11 @@
             "ClientSecret": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
         },
         "IdentityServer": {
-            "IdentityUrl": "https://localhost:5005"
+            "IdentityUrl": "http://localhost:5004"
+        },
+        "swaggerConfig": {
+            "ClientId":  "Swagger-UI"
+
         }
     },
     "Logging": {
