--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -35,6 +35,10 @@
         "Frontend": {
             "RedirectUrisFrontend": [ "http://localhost:4200/auth-callback" ],
             "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
+        },
+        "swagger": {
+            "RedirectUrisSwagger": [ "https://localhost:5001/oauth2-redirect.html" ],
+            "PostLogoutUrisSwagger": [ "https://localhost:5001" ]
         }
     },
     "AllowedHosts": "*"
