added role model

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -33,7 +33,7 @@
             "FhictScopes": ""
         },
         "Frontend": {
-            "RedirectUrisFrontend": [ "http://localhost:4200/auth-callback" ],
+            "RedirectUrisFrontend": [ "http://localhost:4200/auth-callback", "https://www.postman.com/oauth2/callback" ],
             "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
         }
     },
