Dockerized the backend
Dockerized the DeX backend for automating the Deployment to our staging and production environments. Also added the configuration for Traefik.

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,6 +2,16 @@
     "ConnectionStrings": {
         "DefaultConnection": ""
     },
+    "App": {
+        "Frontend": {
+            "FrontendUrl": "",
+            "ClientId": "",
+            "ClientSecret": ""
+        },
+        "IdentityServer": {
+            "IdentityUrl": ""
+        }
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
