--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -9,7 +9,7 @@
     "App": {
         "Self": {
             "JwtAuthority": "",
-            "DeleteTokenLifeTimeInDays": 90, //When a user request deletion of his account, this is the max days before the request is invalid; Default: 90
+            "DeleteTokenLifeTimeInDays": 90,
             "IdentityApplications": []
         },
         "Api": {
