--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -50,7 +50,7 @@ services:
       - traefik.port=5005
 
 networks:
-  mysql-network:
+  mssql-network:
     driver: bridge
     ipam:
       driver: default
