--- a/Services.Tests/2_Services.Tests.csproj
+++ b/Services.Tests/2_Services.Tests.csproj
@@ -2,23 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_3_Repositories.Tests</RootNamespace>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bogus" Version="29.0.2" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\4_Data.csproj" />
+    <ProjectReference Include="..\Repositories.Tests\3_Repositories.Tests.csproj" />
     <ProjectReference Include="..\Repositories\3_Repositories.csproj" />
+    <ProjectReference Include="..\Services\2_Services.csproj" />
   </ItemGroup>
 
 </Project>
