--- a/API/1_API.csproj
+++ b/API/1_API.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.OpenApi" Version="1.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="NetEscapades.Configuration.Validation" Version="2.0.0" />
+    <PackageReference Include="RestSharp" Version="106.11.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
   </ItemGroup>
