Feature/107 role based authorization (#112)
* Get user by user-id from project resource

* Fix editorconfig issues in projectcontroller

* Implemented implicit flow for swagger

* resolved comments

* added entry to changelog

* added xml comments

* added user claim to token.

* added role model

* POC Role controller

* working role controll

* Added problemdetails

* Update CHANGELOG.md

* Added Default Roles seeding

* added info retrieval for user creation

* Delete .dtbcache

* Delete db.lock

* Delete storage.ide

* added bob as default admin

* Delete .dtbcache

* Delete db.lock

* Delete storage.ide

* fixed typo

* spacing

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -11,6 +11,10 @@
         },
         "IdentityServer": {
             "IdentityUrl": "https://localhost:5005"
+        },
+        "Swagger": {
+            "ClientId":  "Swagger-UI"
+
         }
     },
     "Logging": {
