--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -33,8 +33,12 @@
             "FhictScopes": ""
         },
         "Frontend": {
-            "RedirectUrisFrontend": [ "http://localhost:4200/auth-callback" ],
+            "RedirectUrisFrontend": [ "http://localhost:4200/auth-callback", "https://www.postman.com/oauth2/callback" ],
             "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
+        },
+        "swagger": {
+            "RedirectUrisSwagger": [ "https://localhost:5001/oauth2-redirect.html" ],
+            "PostLogoutUrisSwagger": [ "https://localhost:5001" ]
         }
     },
     "AllowedHosts": "*"
