--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -22,6 +22,13 @@
             "FhictRedirectUri": "",
             "FhictScopes": ""
         },
+        "FfhictOIDC": {
+            "Authority": "https://identity.fhict.nl", //The url to the FHICT identityserver
+            "ClientId": "i387545-digitalexc", //The FHICT client id
+            "ClientSecret": "Vth1SSGdm8xTpxYsUzZXB7hhz1XAfbDPuPKa1pVC", //The FHICT client secret
+            "RedirectUri": "https://dex.software/external/callback/fhict", //The FHICT redirect uri
+            "Scopes": "openid profile email roles" //The FHICT scopes
+        },
         "Frontend": {
             "RedirectUrisFrontend": [ "" ],
             "PostLogoutUrisFrontend": [ "" ]
