--- a/Services/2_Services.csproj
+++ b/Services/2_Services.csproj
@@ -6,8 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.11.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Models\5_Models.csproj" />
     <ProjectReference Include="..\Repositories\3_Repositories.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>C:\Users\daroot\.nuget\packages\newtonsoft.json\12.0.2\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
