--- a/IdentityServer/6_IdentityServer.csproj
+++ b/IdentityServer/6_IdentityServer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,6 +9,8 @@
         <PackageReference Include="IdentityServer4" Version="3.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.3" />
         <PackageReference Include="NetEscapades.Configuration.Validation" Version="2.0.0" />
+        <PackageReference Include="Sentry.AspNetCore" Version="2.1.1" />
+        <PackageReference Include="Sentry.Serilog" Version="2.1.1" />
         <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
         <PackageReference Include="System.Security.Principal.Windows" Version="4.3.0" />
     </ItemGroup>
