--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,6 +10,10 @@
         },
         "IdentityServer": {
             "IdentityUrl": ""
+        },
+        "Swagger": {
+            "ClientId":  "Swagger-UI"
+
         }
     },
     "Logging": {
