--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -9,11 +9,12 @@
     "App": {
         "Self": {
             "JwtAuthority": "",
-            "DeleteTokenLifeTimeInDays": 90,
-            "IdentityApplications": []
+            "DeleteTokenLifeTimeInDays": 90
         },
         "Api": {
-            "DeXApiUrl": ""
+            "DeXApiUrl": "",
+            "ClientId": "",
+            "ClientSecret": ""
         },
         "Fhict": {
             "FhictIdentityUrl": "https://identity.fhict.nl",
@@ -23,8 +24,15 @@
             "FhictScopes": ""
         },
         "Frontend": {
-            "RedirectUrisFrontend": [ "" ],
-            "PostLogoutUrisFrontend": [ "" ]
+            "RedirectUriFrontend": "",
+            "RedirectUriPostman": "",
+            "PostLogoutUriFrontend": "",
+            "ClientId": "",
+            "ClientSecret": ""
+        },
+        "swagger": {
+            "RedirectUrisSwagger": "",
+            "PostLogoutUrisSwagger": ""
         }
     },
     "AllowedHosts": "*"
