--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -1,21 +1,39 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
-
-ENV DOTNET_CLI_TELEMETRY_OPTOUT 1
-
-ARG BuildConfiguration=Release
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
 
 WORKDIR /app
 
-COPY bin/Release/PublishOutput/ .
+COPY . ./
 
-ENV App__Self__JwtAuthority = ' '
+ENV App__Self__JwtAuthority = ''
 
-ENV App__Self__IdentityApplications = [ ]
+ENV App__Api__DeXApiUrl = ''
 
-ENV App__Api__DeXApiUrl = ' '
+ENV App__Api__ClientId = ''
 
-ENV App__Frontend__RedirectUrisFrontend = [ ]
+ENV App__Api__ClientSecret = ''
 
-ENV App__Frontend__PostLogoutUrisFrontend = [ ]
+ENV App__Frontend__RedirectUriFrontend = ''
 
-ENTRYPOINT ["dotnet", "6_IdentityServer.dll"]
+ENV App__Frontend__RedirectUriFrontendPostman = ''
+
+ENV App__Frontend__PostLogoutUrisFrontend = ''
+
+ENV App__Frontend__ClientId = ''
+
+ENV App__Frontend__ClientSecret = ''
+
+ENV App__swagger__RedirectUrisSwagger = ''
+
+ENV App__swagger__PostLogoutUrisSwagger = ''
+
+RUN dotnet tool install --tool-path ./ dotnet-certificate-tool
+
+RUN dotnet publish IdentityServer/6_IdentityServer.csproj -c Release -o out
+
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+
+WORKDIR /app
+
+COPY --from=build-env /app .
+
+ENTRYPOINT ["./certs/docker-entrypoint.sh"]
