--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -9,21 +9,13 @@
     "App": {
         "Self": {
             "JwtAuthority": "http://localhost:5004",
-            "DeleteTokenLifeTimeInDays": 90, //When a user request deletion of his account, this is the max days before the request is invalid; Default: 90
-            "IdentityApplications": [ //These settings only apply the first time the API runs (these values don't update the db)
-                {
-                    "Key": "dex-api",
-                    //TODO: This should be set via an environment variable
-                    "Value": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
-                },
-                {
-                    "Key": "dex-frontend",
-                    "Value": "D4JAebnRwJnX^xXzrNRxs2v3qg&qWG5PZ9VB4ngM8!N!mhzcrWh8"
-                }
-            ]
+            "DeleteTokenLifeTimeInDays": 90,
+            "IssuerUri": "http://localhost:5004"
         },
         "Api": {
-            "DeXApiUrl": "http://localhost:5000"
+            "DeXApiUrl": "http://localhost:5000",
+            "ClientId": "dex-api",
+            "ClientSecret": "Q!P5kqCukQBe77cVk5dqWHqx#8FaC2fDN&bstyxrHtw%5R@3Cz*Z"
         },
         "Fhict": {
             "FhictIdentityUrl": "https://identity.fhict.nl",
@@ -33,12 +25,15 @@
             "FhictScopes": ""
         },
         "Frontend": {
-            "RedirectUrisFrontend": [ "http://localhost:4200/auth-callback", "https://www.postman.com/oauth2/callback" ],
-            "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
+            "RedirectUriFrontend": "http://localhost:4200/auth-callback", 
+            "RedirectUriPostman": "https://www.postman.com/oauth2/callback",
+            "PostLogoutUriFrontend": "http://localhost:4200/",
+            "ClientId": "dex-frontend",
+            "ClientSecret": "D4JAebnRwJnX^xXzrNRxs2v3qg&qWG5PZ9VB4ngM8!N!mhzcrWh8"
         },
         "swagger": {
-            "RedirectUrisSwagger": [ "https://localhost:5001/oauth2-redirect.html" ],
-            "PostLogoutUrisSwagger": [ "https://localhost:5001" ]
+            "RedirectUrisSwagger": "https://localhost:5001/oauth2-redirect.html",
+            "PostLogoutUrisSwagger": "https://localhost:5001"
         }
     },
     "AllowedHosts": "*"
