--- a/IdentityServer/6_IdentityServer.csproj
+++ b/IdentityServer/6_IdentityServer.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.3" />
         <PackageReference Include="NetEscapades.Configuration.Validation" Version="2.0.0" />
+        <PackageReference Include="RestSharp" Version="106.11.4" />
         <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
         <PackageReference Include="System.Security.Principal.Windows" Version="4.3.0" />
     </ItemGroup>
