--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -24,8 +24,8 @@
         },
         "FfhictOIDC": {
             "Authority": "https://identity.fhict.nl", //The url to the FHICT identityserver
-            "ClientId": "i387545-digitalexc", //The FHICT client id
-            "ClientSecret": "Vth1SSGdm8xTpxYsUzZXB7hhz1XAfbDPuPKa1pVC", //The FHICT client secret
+            "ClientId": "digitalexcellence", //The FHICT client id
+            "ClientSecret": "BHvuhf4k94Q8vJ64UqVu7g9Cs4uD6yKr", //The FHICT client secret
             "RedirectUri": "https://dex.software/external/callback/fhict", //The FHICT redirect uri
             "Scopes": "openid profile email roles" //The FHICT scopes
         },
