changed displayname to name instead of preferred username

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -37,7 +37,7 @@
             "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
         },
         "FfhictOIDC": {
-            "RedirectUri": "https://localhost:5005/external/callback/fhict", //The FHICT redirect uri
+            "RedirectUri": "https://localhost:5005/external/callback/fhict"
         },
         "swagger": {
             "RedirectUrisSwagger": [ "https://localhost:5001/oauth2-redirect.html" ],
