--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -23,11 +23,11 @@
             "FhictScopes": ""
         },
         "FfhictOIDC": {
-            "Authority": "https://identity.fhict.nl", //The url to the FHICT identityserver
-            "ClientId": "digitalexcellence", //The FHICT client id
-            "ClientSecret": "BHvuhf4k94Q8vJ64UqVu7g9Cs4uD6yKr", //The FHICT client secret
-            "RedirectUri": "https://dex.software/external/callback/fhict", //The FHICT redirect uri
-            "Scopes": "openid profile email roles" //The FHICT scopes
+            "Authority": "https://identity.fhict.nl", 
+            "ClientId": "digitalexcellence", 
+            "ClientSecret": "BHvuhf4k94Q8vJ64UqVu7g9Cs4uD6yKr",
+            "RedirectUri": "https://dex.software/external/callback/fhict", 
+            "Scopes": "openid profile email roles"
         },
         "Frontend": {
             "RedirectUrisFrontend": [ "" ],
