Added env variables for Sentry
Added the sentry variables for Sentry Dsn

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -14,6 +14,9 @@
         "Swagger": {
             "ClientId":  "Swagger-UI"
 
+        },
+        "Sentry": {
+            "ApiDsn": ""
         }
     },
     "Logging": {
