--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -33,6 +33,9 @@
         "swagger": {
             "RedirectUrisSwagger": "",
             "PostLogoutUrisSwagger": ""
+        },
+        "Sentry": {
+            "IdentityDsn": ""
         }
     },
     "AllowedHosts": "*"
