--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -24,6 +24,7 @@ services:
       - App__Frontend__ClientId=${FRONTEND_CLIENT_ID}
       - App__Frontend__ClientSecret=${FRONTEND_CLIENT_SECRET}
       - App__IdentityServer__IdentityUrl=${IDENTITY_URL}
+      - App__Sentry__ApiDsn=${SENTRY_API_DSN}
     image:  digitalexcellence/api
     networks:
       - mssql-network
@@ -44,6 +45,7 @@ services:
       - App__Frontend__ClientSecret=${FRONTEND_CLIENT_SECRET}      
       - App__swagger__RedirectUrisSwagger=${REDIRECT_URIS_SWAGGER}
       - App__swagger__PostLogoutUrisSwagger=${POST_LOGOUT_URIS_SWAGGER}
+      - App__Sentry__IdentityDsn=${SENTRY_IDENTITY_DSN}
     image: digitalexcellence/identity
 
 networks:
