Added env variables for Sentry
Added env variables for Sentry in the corresponding Docker files

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -14,6 +14,8 @@ ENV App__Frontend__ClientSecret = ''
 
 ENV App__IdentityServer__IdentityUrl = ''
 
+ENV App__Sentry__ApiDsn = ''
+
 RUN dotnet publish API/1_API.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
