--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -26,7 +26,7 @@ ENV App__swagger__RedirectUrisSwagger = ''
 
 ENV App__swagger__PostLogoutUrisSwagger = ''
 
-ENV App__Sentry__IdentityDsn = ''
+ENV SENTRY_DSN = ''
 
 RUN dotnet tool install --tool-path ./ dotnet-certificate-tool
 
