--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -24,9 +24,9 @@
         },
         "FfhictOIDC": {
             "Authority": "https://identity.fhict.nl", 
-            "ClientId": "digitalexcellence", 
-            "ClientSecret": "BHvuhf4k94Q8vJ64UqVu7g9Cs4uD6yKr",
-            "RedirectUri": "https://dex.software/external/callback/fhict", 
+            "ClientId": "", 
+            "ClientSecret": "",
+            "RedirectUri": "", 
             "Scopes": "openid profile email roles"
         },
         "Frontend": {
