--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -36,6 +36,9 @@
             "RedirectUrisFrontend": [ "http://localhost:4200/auth-callback", "https://www.postman.com/oauth2/callback" ],
             "PostLogoutUrisFrontend": [ "http://localhost:4200/" ]
         },
+        "FfhictOIDC": {
+            "RedirectUri": "https://localhost:5005/external/callback/fhict"
+        },
         "swagger": {
             "RedirectUrisSwagger": [ "https://localhost:5001/oauth2-redirect.html" ],
             "PostLogoutUrisSwagger": [ "https://localhost:5001" ]
