--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -22,6 +22,13 @@
             "FhictRedirectUri": "",
             "FhictScopes": ""
         },
+        "FfhictOIDC": {
+            "Authority": "https://identity.fhict.nl", 
+            "ClientId": "", 
+            "ClientSecret": "",
+            "RedirectUri": "", 
+            "Scopes": "openid profile email roles"
+        },
         "Frontend": {
             "RedirectUrisFrontend": [ "" ],
             "PostLogoutUrisFrontend": [ "" ]
